public/modules/core/css/core.less
* {
	box-sizing: border-box;
}

[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
	display: none !important;
}

:focus {
	outline: none;
}

a {
	color: @white;
	text-decoration: none;
}

h1 {
	font-size: 4em;
	margin: 0;
}

html {
	height: 100%;
}

body {
	background: @primary;
	color: @primaryText;
	font-family: @mainFont;
	font-weight: @extraBold;
	height: @bodyHeight;
	margin: 0;
}

section {
	max-height: 100%;
	height: 100%;
}

small {
	font-size: 1em;
}

select {
	color: @primary;
}

ul {
	list-style-type: none;
	padding-left: 0;
	margin: 0;
}

::-webkit-input-placeholder {
	font-family: @mainFont;
}

.btn {
    background-color: @selectedColor;
    border: 0;
    color: @white;
    cursor: pointer;
    font-family: inherit;
    height: @inputHeight;
   	margin: @inputMargin 0;
    padding: .4em;
    width: 100%;
    transition: all 1s;

    &:hover {
        background-color: @selectedColor;
        transition: all 1s;
    }

    &:disabled {
		background-color: darken(@selectedColor, 10%);
		transition: all .2s;
    }
}

.btn-small {
	width: @inputWidth / 3;
}

.btn-mini {
	width: @inputWidth / 4;
	height: @inputHeight / 1.5;
	font-size: 1.2em;
	margin: 0;
}

.caret {
	&.right:before {
		content: '▶';
	}

	&.down:before {
		content: '▼';
	}

	display: inline-block;
	font-size: 0.5em;
	margin-left: 10px;
	vertical-align: middle;
}

.collapsing {
	overflow: visible;
}

.container {
	width: 100%;
}

.content {
	float: left;
	width: 100%;

	height: calc(~"100% - " @navbarHeight);
}

.dropdown-menu {
	background-color: @primary;

	& > li {
		& > a {
			background-color: @primary;
			color: inherit;
			text-decoration: none;

			&:hover {
				color: @white;
				background-image: none;
			};
		}	
	}

	.active {
		& > a,
		& > a:hover,
		& > a:focus {
			background-color: @secondary;
			background-image: none;
		}
	}
}

.dropdown-toggle {
	cursor: pointer;
}

.fa.active {
	color: @selectedColor;
}

.form-group {
	input {
		background-color: @secondary;
		box-sizing: border-box;
		border: 1px solid @secondary;
		color: @white;
		font-family: @mainFont !important;
		margin: @inputMargin 0;
		width: 100%;
		height: @inputHeight;
		padding: @inputMargin;
	}

	select {
		background-color: @secondary;
		border: 1px solid @secondary;
		color: @white;
		height: @inputHeight;
		margin: @inputMargin 0;
		line-height: 2;
		padding: 0 @inputMargin;
		width: 100%;
	}

	.details {
		font-size: 0.7em;
		margin-bottom: @inputMargin * 3;
	}
}

.hero {
	display: table;
	height: 100%;
	text-align: center;
	width: 100%;
}

.hide {
	display: none !important;
}

.invisible {
	visibility: hidden !important;
}

.header-container {
	.BoxShadowHelper(1);

	box-sizing: border-box;
	background: @black;
	font-family: inherit;
	list-style-type: none;
	overflow: hidden;
	height: @navbarHeight;
	z-index: 10;
}

.header-container-inner {
	transition: max-height 1s;
	max-height: 100%;

	.header {
		margin: 0;
		text-align: center;
		vertical-align: middle;
		font-size: 2em;
	}
}

.help-page {
	h1 {
		margin: 0 0 @inputMargin;
	}
}

.loading {
	height: 100%;
	width: 100%;
}

.mainContainer {
	height: 100%;
}

.main-viewport {
	float: left;
	position: relative;
	width: 100%;
	height: 100%;

	level& {
		padding: @inputMargin * 5;
	}
}

.navbar-header {
	background-color: @selectedColor;

	/* I have no idea where this margin is coming from
		to need to be overidden, dev tools shows nothing */
	margin: 0;
	padding: 0 @inputMargin;
	text-align: center;
}

.navbar-toggle {
	.border-radius();

	border: 1px solid @white;
	display: inline-block;
	font-size: 2em;
	padding: 0.5em;
}

.navbar-nav-container {
	.navbar-nav {
		float: left;
		min-width: @navbarHeight;
		padding: @inputMargin;

		div {
			font-size: 0.8rem;
			text-align: center;
		}

		& > li {
			color: @white;
			text-decoration: none;
			margin: 0 @inputMargin;
			transition: all 1s;

			&:hover {
				color: @selectedColor;
				transition: all 1s;
			}
		}

		.fa:not(.fa-star) {
			display: block;
			margin: @borderRadius;
			text-align: center;
		}
	}
}

.ng-invalid.ng-dirty{
    border-color: @invalidColor;
}
.ng-valid.ng-dirty{
    border-color: @selectedColor;
}

.playable-area {
	height: @bodyHeight;
}

.pull-right {
	float: right;
}

.readable {
	line-height: 1.5;
	max-width: 75%;
	margin: 0 auto;
}

.red {
	color: @red;
}

.restrict-width {
	max-width: 300px;

	@media screen and (max-width: @mediumScreen) {
		margin: 0 auto;
    }
}

.row {
	display: inline-block;
	width: 100%;
}

.sign-on {
    .btn {
        margin: 1em;
    }

    a {
        text-decoration: none;
    }
}

.splash {
	font-size: 10em;
	font-family: @mainFont;
}

.undecorated-link {
	&:hover {
		text-decoration: none;
	}
}

.valign-inner {
	display: table-cell;
	vertical-align: middle;
}

/*
 *  Mixins
 */

 .border-radius (@radius: @borderRadius) {
    -webkit-border-radius: @radius;
    -moz-border-radius:    @radius;
    border-radius:         @radius;

    -moz-background-clip:    padding;
    -webkit-background-clip: padding-box;
    background-clip:         padding-box;
}

.box-sizing (@box-sizing: content-box) {
    -webkit-box-sizing: @box-sizing;
    -moz-box-sizing: @box-sizing;
    -o-box-sizing: @box-sizing;
    box-sizing: @box-sizing;
}

